Optimized List implementation to meet performance acceptance criteria